--- a/index.html
+++ b/index.html
@@ -8,17 +8,39 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- Font Awesome Link -->
+    <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/v6.4.0/css/pro.min.css">
     <!-- Stylesheet Link -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <main>
+        <!-- Banner Section -->
         <section class="banner-sec">
                 <div class="banner-content">
                     <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
                     <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
                     <a href="#" class="banner-btn">Contact Us</a>
                 </div>
+        </section>
+        <!-- About Section -->
+        <section class="about-sec container pt-135">
+            <div class="about-content-wraper">
+                <div class="about-img">
+                    <img src="./assets/images/person.png" alt="">
+                </div>
+            <div class="about-content">
+                <h2 class="about-title">My failures of previous year</h2>
+                <p class="about-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <ul class="about-list">
+                    <li><i class="fa-regular fa-check"></i> Contrary to popular belief, is not simply.</li>
+                    <li><i class="fa-regular fa-check"></i> Contrary to popular belief.</li>
+                    <li><i class="fa-regular fa-check"></i> Contrary to popular , is not simply.</li>
+                    <li><i class="fa-regular fa-check"></i> Contrary to popular belief, is not simply.</li>
+                    <li><i class="fa-regular fa-check"></i> Contrary to popular simply.</li>
+                </ul>
+            </div>
+            </div>
         </section>
     </main>
 </body>
