--- a/index.html
+++ b/index.html
@@ -42,6 +42,32 @@
             </div>
             </div>
         </section>
+        <!-- Plan Section -->
+        <section class="plan-section container pt-135">
+            <h2 class="section-title">My Plans</h2>
+            <div class="plan-content-wraper">
+                <div class="plan">
+                    <img src="./assets/icons/web.png" alt="">
+                    <h3 class="plan-title">Web Development</h3>
+                    <p class="plan-description">I want to start</p>
+                </div>
+                <div class="plan">
+                    <img src="./assets/icons/js.png" alt="">
+                    <h3 class="plan-title">Javascript</h3>
+                    <p class="plan-description">I want to learn</p>
+                </div>
+                <div class="plan">
+                    <img src="./assets/icons/smoke.png" alt="">
+                    <h3 class="plan-title">Smoking Habit</h3>
+                    <p class="plan-description">I want to end</p>
+                </div>
+                <div class="plan">
+                    <img src="./assets/icons/ecom.png" alt="">
+                    <h3 class="plan-title">ecommerce</h3>
+                    <p class="plan-description">I want to develop</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
