CTA Section added

--- a/index.html
+++ b/index.html
@@ -68,6 +68,52 @@
                 </div>
             </div>
         </section>
+        <!-- CTA Section -->
+        <section class="cta-section">
+            <div class="container">
+                <div class="cta-content">
+                    <h2 class="cta-title">Awlays keep a positive mindset</h2>
+                <a href="#" class="cta-btn">Call Now</a>
+                </div>
+            </div>
+        </section>
+        <!-- Footer Section -->
+        <footer>
+            <div class="container">
+                <div class="footer-content-wraper">
+                    <div class="footer-content">
+                        <h2 class="footer-title">Future</h2>
+                        <p class="footer-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                        <ul class="footer-list">
+                            <li>Email : info@gmail.com</li>
+                            <li>Phone : 01500 00 00 00</li>
+                        </ul>
+                        <div class="social-icon-wraper">
+                            <div class="social-icon">
+                                <a href="#">
+                                    <img src="./assets/icons/fb.png" alt="">
+                                </a>
+                            </div>
+                            <div class="social-icon">
+                                <a href="#">
+                                    <img src="./assets/icons/twitter.png" alt="">
+                                </a>
+                            </div>
+                            <div class="social-icon">
+                                <a href="#">
+                                    <img src="./assets/icons/youtube.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer-form">
+                        <h3 class="form-title">Subscribe</h3>
+                        <input type="email" name="" id="" class="email">
+                        <input type="submit" value="Subscribe" class="submit">
+                    </div>
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
