--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
                     </div>
                     <div class="footer-form">
                         <h3 class="form-title">Subscribe</h3>
-                        <input type="email" name="" id="" class="email">
-                        <input type="submit" value="Subscribe" class="submit">
+                        <form action="#">
+                            <input type="email" placeholder="Enter your email" class="email">
+                        <input type="submit" value="Subscribe" class="submit-btn">
+                        </form>
                     </div>
                 </div>
             </div>
