Portfolio Section added

--- a/index.html
+++ b/index.html
@@ -68,6 +68,45 @@
                 </div>
             </div>
         </section>
+        <!-- Portfolio Section -->
+        <section class="portfolio-section container pt-135">
+            <h2 class="portfolio-title">My Portfolio</h2>
+            <div class="portfolio-wraper">
+                <div class="portfolio-category">
+                    <ul>
+                        <li class="active">all</li>
+                        <li>branding</li>
+                        <li>mobile app</li>
+                        <li>creative</li>
+                    </ul>
+                </div>
+                <div class="portfolio-items">
+                    <div class="portfolio">
+                        <div class="portfolio-hover-box">
+                            <img src="./assets/images/1.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="portfolio">
+                        <div class="portfolio-hover-box">
+                            <img src="./assets/images/2.jpg" alt="">
+                        </div>
+                        <div class="portfolio-items">
+                            <div class="portfolio">
+                                <div class="portfolio-hover-box">
+                                    <img src="./assets/images/3.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="portfolio">
+                                <div class="portfolio-hover-box">
+                                    <img src="./assets/images/4.jpg" alt="">
+                                </div>
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- CTA Section -->
         <section class="cta-section">
             <div class="container">
