Hover effect added and Readme file edited

--- a/index.html
+++ b/index.html
@@ -84,21 +84,37 @@
                     <div class="portfolio">
                         <div class="portfolio-hover-box">
                             <img src="./assets/images/1.jpg" alt="">
+                            <div class="portfolio-title-box">
+                                <h3 class="box-title">Creative Design</h3>
+                                <p class="box-subtitle">Graphic</p>
+                            </div>
                         </div>
                     </div>
                     <div class="portfolio">
                         <div class="portfolio-hover-box">
                             <img src="./assets/images/2.jpg" alt="">
+                            <div class="portfolio-title-box">
+                                <h3 class="box-title">Creative Design</h3>
+                                <p class="box-subtitle">Brand, Web</p>
+                            </div>
                         </div>
                         <div class="portfolio-items">
                             <div class="portfolio">
                                 <div class="portfolio-hover-box">
                                     <img src="./assets/images/3.jpg" alt="">
+                                    <div class="portfolio-title-box">
+                                        <h3 class="box-title">Creative Design</h3>
+                                        <p class="box-subtitle">Website</p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="portfolio">
                                 <div class="portfolio-hover-box">
                                     <img src="./assets/images/4.jpg" alt="">
+                                    <div class="portfolio-title-box">
+                                        <h3 class="box-title">Creative Design</h3>
+                                        <p class="box-subtitle">Graphic</p>
+                                    </div>
                                 </div>
                                 
                             </div>
